feat: add ordinal numbers

--- a/src/content/contests/202503_pascalctf.mdx
+++ b/src/content/contests/202503_pascalctf.mdx
@@ -2,7 +2,7 @@
 title: PascalCTF Beginners 2025
 startDate: 2025-03-20 00:00
 endDate: 2025-03-20 05:00
-result: "7"
+result: 7th
 tags: []
 members:
     - chizuchizu
