--- a/src/content/contests/202503_picoctf2025.mdx
+++ b/src/content/contests/202503_picoctf2025.mdx
@@ -2,7 +2,7 @@
 title: picoCTF 2025
 startDate: 2025-03-08 02:00
 endDate: 2025-03-18 04:00
-result: 15 (all)
+result: 15th (all)
 tags: []
 members:
     - chizuchizu
